--- a/data306_wk01tues.qmd
+++ b/data306_wk01tues.qmd
@@ -178,8 +178,8 @@ Make a copy of this: [burl.live/start](burl.live/start)
 ## Day 1 Goals
 
 * Course overview
-* Introduce the projects
-* Data analysis workflow
+* Introduction to the projects
+
 
 
 ----
@@ -214,18 +214,6 @@ Main site:
 
 ---
 
-## Overarching Theme: Developing Data Science Unicorns
-
-::::: columns
-::: {.column .center width="100%"}
-
-![](img/Data306_Unicorn_Fall2025.png){width="60%"}
-
-:::
-
-:::::
-
----
 
 ## Learning Objectives
 
@@ -238,6 +226,159 @@ You will engage in collaborative, data science projects.  Upon successful comple
 * Collaborate on projects with a reproducible workflow.
 * Run a productive consulting meeting.
 * Undertake future projects with greater independence.
+
+
+---
+
+## Overarching Goal: Create Data Science Unicorns!
+
+::::: columns
+::: {.column .center width="100%"}
+
+![](img/Data306_Unicorn_Fall2025.png){width="60%"}
+
+:::
+
+:::::
+
+---
+
+## Data Science Skills
+
+
+::::: columns
+
+::: {.column width="50%"}
+
+* Mapping a vague question to data
+
+* Exploratory data analysis
+
+* Data visualization
+
+* Modeling
+
+* Writing clean, robust, and consistent code
+
+
+:::
+
+::: {.column .center width="50%"}
+
+![https://xkcd.com/2048/](img/curve_fitting.png){width="60%"}
+
+:::
+
+:::::
+
+---
+
+## Story Telling Skills
+
+
+::::: columns
+
+::: {.column width="50%"}
+
+* Oral presentations
+
+* Written technical reports
+
+* Elevator speeches
+
+* Consulting conversations
+
+:::
+
+::: {.column .center width="50%"}
+
+![https://www.xkcd.com/1984/](img/communication.png){width="70%"}
+
+:::
+
+:::::
+
+
+---
+
+## Collaboration Skills
+
+
+::::: columns
+
+::: {.column width="50%"}
+
+- Reproducible workflow
+    - Git and GitHub
+    - Quarto
+    - Documentation
+
+- Team Science
+    - Stakeholders
+    - Peers
+    - Team Leaders
+    - Data science mentor
+    
+- Running a meeting
+
+:::
+
+::: {.column .center width="50%"}
+
+![](img/power_skills.png){width="90%"}
+
+:::
+
+:::::
+
+---
+
+## Ethics
+
+
+::::: columns
+
+::: {.column width="40%"}
+
+
+* Report results honestly
+
+* Are transparent in your data wrangling, assumptions and model building choices
+
+* Follow a reproducible workflow
+
+* Consider data privacy issues
+
+:::
+
+::: {.column .center width="60%"}
+
+![https://dilbert.com](img/ethics.png){width="100%"}
+
+:::
+
+:::::
+
+
+---
+
+## Ethics
+
+::::: columns
+
+::: {.column .center width="30%"}
+
+![https://xkcd.com/1390/](img/ethics2.png){width="80%"}
+
+:::
+
+::: {.column .center width="50%"}
+
+![https://xkcd.com/882](img/significant.png){width="40%"}
+
+:::
+
+:::::
 
 
 ---
@@ -323,22 +464,20 @@ You will engage in collaborative, data science projects.  Upon successful comple
 ::: fragment
 
 **AI Policy**
-:::
+
 
 While A.I. tools, such as ChatGPT, are being used to generate code and analyze data, goals of this course are to develop your **own** ability to write code, to thoughtfully extract knowledge from data, and to communicate your findings. 
 
 Students may use AI in these course activities:
 
+:::
+
+
+* Brainstorming ideas for their project.
 * Providing feedback on their writing.  The original draft should be the student's work but you can ask for feedback from AI and incorporate thate feedback into the revision.
 * Providing coding suggestions.  The student is responsible for understanding every line of code in their project, regardless of whether it was written by them, their project members, their mentor, or AI.
-* Brainstorming ideas for their project.
 
 
-------------------------------------------------------------------------
-
-## Data Science/Statistical Consulting
-
-XXX
 
 ------------------------------------------------------------------------
 
@@ -360,6 +499,29 @@ Each project charter has:
 **Please read over the project charters and complete the Background and Interest Survey by noon tomorrow!**
 
 :::
+
+---
+
+## Reflection
+
+
+::::: columns
+::: {.column .center width="50%"}
+![](img/Data306_Unicorn_Fall2025.png){width="90%"}
+:::
+
+::: {.column .center width="50%"}
+
+
+* Of our data science unicorn skills, list 1-2 where you feel the most confident in your current skill level.
+* Of our data science unicorn skills, list 1-2 where you feel you have the most room to grow.
+
+    
+    
+:::
+:::::
+
+
 
 ------------------------------------------------------------------------
 
@@ -387,7 +549,11 @@ Try to access the RStudio Server between now and next lecture.
 
 ------------------------------------------------------------------------
 
-## Reminders
+## Rest of Class
 
 
 * Start tackling the items here: [burl.live/start](burl.live/start)
+
+* Read over the project descriptions.
+
+* Add your GitHub username.
