Week 2 Tues Slides

--- a/index.qmd
+++ b/index.qmd
@@ -9,4 +9,5 @@ The lecture slides will be posted here.
 |-----------------|--------------------------|
 | Week 1, Tues  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk01tues.html) | 
 | Week 1, Thurs  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk01thurs.html) | 
+| Week 2, Tues  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk02tues.html) | 
 :::
