--- a/data306_wk02tues.qmd
+++ b/data306_wk02tues.qmd
@@ -2,7 +2,7 @@
 pagetitle: "Project"
 format: 
   revealjs:
-    chalkboard: true
+#   chalkboard: true
     incremental: true
     theme: [default, custom.scss]
 #    multiplex: true
