--- a/data306_wk01thurs.qmd
+++ b/data306_wk01thurs.qmd
@@ -2,7 +2,7 @@
 pagetitle: "Data Work"
 format: 
   revealjs:
-    chalkboard: true
+#    chalkboard: true
     incremental: true
     theme: [default, custom.scss]
 #    multiplex: true
