updated index to include week 3 tues

--- a/index.qmd
+++ b/index.qmd
@@ -11,4 +11,5 @@ The lecture slides will be posted here.
 | Week 1, Thurs  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk01thurs.html) | 
 | Week 2, Tues  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk02tues.html) | 
 | Week 2, Thurs  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk02thurs.html) | 
+| Week 3, Tues  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk03tues.html) | 
 :::
