--- a/index.qmd
+++ b/index.qmd
@@ -12,4 +12,5 @@ The lecture slides will be posted here.
 | Week 2, Tues  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk02tues.html) | 
 | Week 2, Thurs  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk02thurs.html) | 
 | Week 3, Tues  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk03tues.html) | 
+| Week 3, Thurs  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk03thurs.html) | 
 :::
