--- a/data_AI_literacy.qmd
+++ b/data_AI_literacy.qmd
@@ -5,7 +5,7 @@ format:
     chalkboard: true
     incremental: true
     theme: [default, custom.scss]
-    multiplex: true
+#    multiplex: true
     height: 900
     width: 1600
     slide-number: c
