--- a/data306_wk09tues.qmd
+++ b/data306_wk09tues.qmd
@@ -89,6 +89,7 @@ library(patchwork)
 
 ## Mock Consulting
 
+* Suggested attire: Business casual
 * I will assign each of you to a consulting team and you will participate in two 15 minute mock sessions.
 * Be ready to:
     + Run a 15 minute meeting.
