added week 12 tues slides

--- a/index.qmd
+++ b/index.qmd
@@ -19,4 +19,5 @@ The lecture slides will be posted here.
 | Week 8, Thurs  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk08thurs.html) |
 | Week 9, Tues  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk09tues.html) |
 | Week 10, Tues  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk10tues.html) |
+| Week 12, Tues  | [{{< fa display >}}](https://mcconvil.github.io/data306f25/data306_wk12tues.html) |
 :::
